--- a/source/index.html
+++ b/source/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Название проекта</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="preload" href="#" type="font/woff2" as="font">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/index.js" defer></script>
-  </head>
-  <body class="page__body">
-    <header class="header">Шапка</header>
-    <main>
-      <h1>Страница для старта</h1>
-    </main>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Название проекта</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+  <link rel="preload" href="fonts/montserrat-400.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/montserrat-500.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/montserrat-600.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/montserrat-700.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/montserrat-800.woff2" type="font/woff2" as="font">
+
+  <link rel="stylesheet" href="styles/styles.css">
+</head>
+
+<body class="page__body">
+  <header class="header">Шапка</header>
+
+  <main>
+    <h1>Страница для старта</h1>
+  </main>
+
+  <script src="vendor/nouislider/nouislider.js" defer></script>
+  <script src="scripts/index.js" type="module"></script>
+</body>
+
 </html>
