--- a/source/index.html
+++ b/source/index.html
@@ -6,11 +6,11 @@
   <title>Название проекта</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <link rel="preload" href="fonts/montserrat-400.woff2" type="font/woff2" as="font">
-  <link rel="preload" href="fonts/montserrat-500.woff2" type="font/woff2" as="font">
-  <link rel="preload" href="fonts/montserrat-600.woff2" type="font/woff2" as="font">
-  <link rel="preload" href="fonts/montserrat-700.woff2" type="font/woff2" as="font">
-  <link rel="preload" href="fonts/montserrat-800.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Montserrat-Regular.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Montserrat-Medium.woff2.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Montserrat-SemiBold.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Montserrat-Bold.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Montserrat-ExtraBold.woff2" type="font/woff2" as="font">
 
   <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -531,7 +531,7 @@
     </div>
   </footer>
 
-  <script src="vendor/nouislider/nouislider.js" defer></script>
+  <!-- <script src="vendor/nouislider/nouislider.js" defer></script> -->
   <script src="scripts/index.js" type="module"></script>
 </body>
 
