--- a/source/index.html
+++ b/source/index.html
@@ -435,7 +435,7 @@
       <h2 class="visually-hidden">Карта с адресом компании.</h2>
       <div class="address__wrapper">
         <picture>
-          <img class="address__map" src="images/address-map-mobile@1x.png" srcset="images/address-map-mobile@2x.png 2x" width="320" height="420" alt="Карта с адресом компании.">
+          <img class="address__map" src="images/address-map-mobile@1x.jpg" srcset="images/address-map-mobile@2x.jpg 2x" width="320" height="420" alt="Карта с адресом компании.">
         </picture>
       </div>
     </section>
