add some styles

--- a/source/index.html
+++ b/source/index.html
@@ -297,106 +297,106 @@
           </div>
         </div>
         <ul class="catalog__list">
-          <li class="catalog-card">
-            <a class="catalog-card__image-link" tabindex="-1" href="#">
+          <li class="card">
+            <a class="card__image-link" tabindex="-1" href="#">
               <picture>
-                <img class="catalog-card__image" src="images/catalog/catalog-1@1x.png" srcset="images/catalog/catalog-1@2x.png 2x" width="130" height="188" alt="Фото товара">
+                <img class="card__image" src="images/catalog/catalog-1@1x.png" srcset="images/catalog/catalog-1@2x.png 2x" width="130" height="188" alt="Фото товара">
               </picture>
             </a>
-            <h3 class="catalog-card__title">
-              <a class="catalog-card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
+            <h3 class="card__title">
+              <a class="card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
             </h3>
-            <p class="catalog-card__description">
+            <p class="card__description">
               Кофе без кофеина из Эфиопии с натуральным фермерским молоком
             </p>
-            <div class="catalog-card__price-wrapper">
-              <span class="catalog-card__price">225₽</span>
-              <a class="catalog-card__button button button--primary" href="#">В корзину</a>
+            <div class="card__price-wrapper">
+              <span class="card__price">225₽</span>
+              <a class="card__button button button--primary" href="#">В корзину</a>
             </div>
           </li>
-          <li class="catalog-card">
-            <a class="catalog-card__image-link" tabindex="-1" href="#">
+          <li class="card">
+            <a class="card__image-link" tabindex="-1" href="#">
               <picture>
-                <img class="catalog-card__image" src="images/catalog/catalog-2@1x.png" srcset="images/catalog/catalog-2@2x.png 2x" width="130" height="188" alt="Фото товара">
+                <img class="card__image" src="images/catalog/catalog-2@1x.png" srcset="images/catalog/catalog-2@2x.png 2x" width="130" height="188" alt="Фото товара">
               </picture>
             </a>
-            <h3 class="catalog-card__title">
-              <a class="catalog-card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
+            <h3 class="card__title">
+              <a class="card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
             </h3>
-            <p class="catalog-card__description">
+            <p class="card__description">
               Кофе без кофеина из Эфиопии с натуральным фермерским молоком
             </p>
-            <div class="catalog-card__price-wrapper">
-              <span class="catalog-card__price">225₽</span>
-              <a class="catalog-card__button button button--primary" href="#">В корзину</a>
+            <div class="card__price-wrapper">
+              <span class="card__price">225₽</span>
+              <a class="card__button button button--primary" href="#">В корзину</a>
             </div>
           </li>
-          <li class="catalog-card">
-            <a class="catalog-card__image-link" tabindex="-1" href="#">
+          <li class="card">
+            <a class="card__image-link" tabindex="-1" href="#">
               <picture>
-                <img class="catalog-card__image" src="images/catalog/catalog-3@1x.png" srcset="images/catalog/catalog-3@2x.png 2x" width="130" height="188" alt="Фото товара">
+                <img class="card__image" src="images/catalog/catalog-3@1x.png" srcset="images/catalog/catalog-3@2x.png 2x" width="130" height="188" alt="Фото товара">
               </picture>
             </a>
-            <h3 class="catalog-card__title">
-              <a class="catalog-card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
+            <h3 class="card__title">
+              <a class="card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
             </h3>
-            <p class="catalog-card__description">
+            <p class="card__description">
               Кофе без кофеина из Эфиопии с натуральным фермерским молоком
             </p>
-            <div class="catalog-card__price-wrapper">
-              <span class="catalog-card__price">225₽</span>
-              <a class="catalog-card__button button button--primary" href="#">В корзину</a>
+            <div class="card__price-wrapper">
+              <span class="card__price">225₽</span>
+              <a class="card__button button button--primary" href="#">В корзину</a>
             </div>
           </li>
-          <li class="catalog-card">
-            <a class="catalog-card__image-link" tabindex="-1" href="#">
+          <li class="card">
+            <a class="card__image-link" tabindex="-1" href="#">
               <picture>
-                <img class="catalog-card__image" src="images/catalog/catalog-4@1x.png" srcset="images/catalog/catalog-4@2x.png 2x" width="130" height="188" alt="Фото товара">
+                <img class="card__image" src="images/catalog/catalog-4@1x.png" srcset="images/catalog/catalog-4@2x.png 2x" width="130" height="188" alt="Фото товара">
               </picture>
             </a>
-            <h3 class="catalog-card__title">
-              <a class="catalog-card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
+            <h3 class="card__title">
+              <a class="card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
             </h3>
-            <p class="catalog-card__description">
+            <p class="card__description">
               Кофе без кофеина из Эфиопии с натуральным фермерским молоком
             </p>
-            <div class="catalog-card__price-wrapper">
-              <span class="catalog-card__price">225₽</span>
-              <a class="catalog-card__button button button--primary" href="#">В корзину</a>
+            <div class="card__price-wrapper">
+              <span class="card__price">225₽</span>
+              <a class="card__button button button--primary" href="#">В корзину</a>
             </div>
           </li>
-          <li class="catalog-card">
-            <a class="catalog-card__image-link" tabindex="-1" href="#">
+          <li class="card">
+            <a class="card__image-link" tabindex="-1" href="#">
               <picture>
-                <img class="catalog-card__image" src="images/catalog/catalog-5@1x.png" srcset="images/catalog/catalog-5@2x.png 2x" width="130" height="188" alt="Фото товара">
+                <img class="card__image" src="images/catalog/catalog-5@1x.png" srcset="images/catalog/catalog-5@2x.png 2x" width="130" height="188" alt="Фото товара">
               </picture>
             </a>
-            <h3 class="catalog-card__title">
-              <a class="catalog-card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
+            <h3 class="card__title">
+              <a class="card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
             </h3>
-            <p class="catalog-card__description">
+            <p class="card__description">
               Кофе без кофеина из Эфиопии с натуральным фермерским молоком
             </p>
-            <div class="catalog-card__price-wrapper">
-              <span class="catalog-card__price">225₽</span>
-              <a class="catalog-card__button button button--primary" href="#">В корзину</a>
+            <div class="card__price-wrapper">
+              <span class="card__price">225₽</span>
+              <a class="card__button button button--primary" href="#">В корзину</a>
             </div>
           </li>
-          <li class="catalog-card">
-            <a class="catalog-card__image-link" tabindex="-1" href="#">
+          <li class="card">
+            <a class="card__image-link" tabindex="-1" href="#">
               <picture>
-                <img class="catalog-card__image" src="images/catalog/catalog-6@1x.png" srcset="images/catalog/catalog-6@2x.png 2x" width="130" height="188" alt="Фото товара">
+                <img class="card__image" src="images/catalog/catalog-6@1x.png" srcset="images/catalog/catalog-6@2x.png 2x" width="130" height="188" alt="Фото товара">
               </picture>
             </a>
-            <h3 class="catalog-card__title">
-              <a class="catalog-card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
+            <h3 class="card__title">
+              <a class="card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
             </h3>
-            <p class="catalog-card__description">
+            <p class="card__description">
               Кофе без кофеина из Эфиопии с натуральным фермерским молоком
             </p>
-            <div class="catalog-card__price-wrapper">
-              <span class="catalog-card__price">225₽</span>
-              <a class="catalog-card__button button button--primary" href="#">В корзину</a>
+            <div class="card__price-wrapper">
+              <span class="card__price">225₽</span>
+              <a class="card__button button button--primary" href="#">В корзину</a>
             </div>
           </li>
         </ul>
