--- a/source/index.html
+++ b/source/index.html
@@ -21,6 +21,8 @@
       <div class="header__logo">
         <a class="header__logo-link" href="index.html">
           <picture>
+            <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="170" height="36">
+            <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="82" height="36">
             <img class="header__logo-image" src="images/logo-title.svg" width="32" height="36" alt="Логотип компании Drink2Go">
           </picture>
         </a>
@@ -53,11 +55,17 @@
       <ul class="main-nav__activities activities">
         <li class="activities__item">
           <a class="activities__link link" href="#">
+            <svg class="activities__user-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M10.67 4a2.67 2.67 0 1 1-5.34 0 2.67 2.67 0 0 1 5.34 0Zm1.33 0a4 4 0 1 1-8 0 4 4 0 0 1 8 0Zm-8.8 8.31a7.55 7.55 0 0 1 4.8-1.64c1.84 0 3.56.6 4.8 1.64a4.83 4.83 0 0 1 1.87 3.69h1.33c0-1.77-.84-3.46-2.34-4.71a8.88 8.88 0 0 0-5.66-1.96c-2.12 0-4.16.7-5.66 1.96a6.16 6.16 0 0 0-2.34 4.71h1.33c0-1.33.63-2.66 1.87-3.69Z" fill="currentColor" />
+            </svg>
             <span class="activities__item-title">Войти</span>
           </a>
         </li>
         <li class="activities__item">
           <a class="activities__link link" href="#">
+            <svg class="activities__cart-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="m5.66 3.88.23 2.79h4.22l.23-2.8a2.35 2.35 0 1 0-4.68 0Zm5.78 2.79.23-2.68a3.68 3.68 0 1 0-7.34 0l.23 2.68h-4.56l.19 1.33.82 5.71a2.67 2.67 0 0 0 2.64 2.29h8.7c1.33 0 2.46-.98 2.64-2.29l.82-5.71.19-1.33h-4.55Zm-.1 1.33h-.06l-.22 2.67h3.02l.38-2.67h-3.13Zm-1.4 0h-3.88l.22 2.67h3.44l.22-2.67Zm-5.22 0h-3.18l.38 2.67h3.02l-.22-2.67Zm1.9 6.67-.23-2.67h3.22l-.22 2.67h-2.78Zm4.33-2.67-.23 2.67h1.63c.67 0 1.23-.5 1.32-1.15l.22-1.52h-2.94Zm-5.9 0 .23 2.67h-1.63c-.67 0-1.23-.5-1.32-1.15l-.22-1.52h2.94Z" fill="currentColor" />
+            </svg>
             <span class="activities__item-title">Корзина</span>
           </a>
         </li>
@@ -75,6 +83,11 @@
           <div class="hero__container">
             <div class="hero__image-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/hero-desktop-1@1x.webp 1x, images/hero-desktop-1@2x.webp 2x" width="600" height="600">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/hero-tablet-1@1x.webp 1x, images/hero-tablet-1@2x.webp 2x" width="476" height="476">
+                <source type="image/webp" srcset="images/hero-mobile-1@1x.webp 1x, images/hero-mobile-1@2x.webp 2x" width="280" height="280">
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/hero-desktop-1@1x.png 1x, images/hero-desktop-1@2x.png 2x" width="600" height="600">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/hero-tablet-1@1x.png 1x, images/hero-tablet-1@2x.png 2x" width="476" height="476">
                 <img class="hero__image" src="images/hero-mobile-1@1x.png" srcset="images/hero-mobile-1@2x.png 2x" width="280" height="280" alt="Банка безкофеинового кофе Декаф Флэт Уайт">
               </picture>
             </div>
@@ -98,6 +111,11 @@
           <div class="hero__container">
             <div class="hero__image-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/hero-desktop-2@1x.webp 1x, images/hero-desktop-2@2x.webp 2x" width="600" height="600">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/hero-tablet-2@1x.webp 1x, images/hero-tablet-2@2x.webp 2x" width="476" height="476">
+                <source type="image/webp" srcset="images/hero-mobile-2@1x.webp 1x, images/hero-mobile-2@2x.webp 2x" width="280" height="280">
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/hero-desktop-2@1x.png 1x, images/hero-desktop-2@2x.png 2x" width="600" height="600">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/hero-tablet-2@1x.png 1x, images/hero-tablet-2@2x.png 2x" width="476" height="476">
                 <img class="hero__image" src="images/hero-mobile-2@1x.png" srcset="images/hero-mobile-2@2x.png 2x" width="280" height="280" alt="Банка безкофеинового кофе Декаф Флэт Уайт">
               </picture>
             </div>
@@ -119,6 +137,11 @@
           <div class="hero__container">
             <div class="hero__image-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/hero-desktop-3@1x.webp 1x, images/hero-desktop-3@2x.webp 2x" width="600" height="600">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/hero-tablet-3@1x.webp 1x, images/hero-tablet-3@2x.webp 2x" width="476" height="476">
+                <source type="image/webp" srcset="images/hero-mobile-3@1x.webp 1x, images/hero-mobile-3@2x.webp 2x" width="280" height="280">
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/hero-desktop-3@1x.png 1x, images/hero-desktop-3@2x.png 2x" width="600" height="600">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/hero-tablet-3@1x.png 1x, images/hero-tablet-3@2x.png 2x" width="476" height="476">
                 <img class="hero__image" src="images/hero-mobile-3@1x.png" srcset="images/hero-mobile-3@2x.png 2x" width="280" height="280" alt="Банка безкофеинового кофе Декаф Флэт Уайт">
               </picture>
             </div>
@@ -153,13 +176,13 @@
           <button class="hero__page-button hero__page-button--before slider-button-prev" type="button" disabled>
             <span class="visually-hidden">Назад</span>
             <svg class="hero__page-button-icon" aria-hidden="true" focusable="false" width="11" height="20">
-              <use href="icons/arrow-left-icon.svg"></use>
+              <use href="icons/stack.svg#arrow-left-slider-icon"></use>
             </svg>
           </button>
           <button class="hero__page-button hero__page-button--after slider-button-next" type="button">
             <span class="visually-hidden">Вперед</span>
             <svg class="hero__page-button-icon" aria-hidden="true" focusable="false" width="11" height="20">
-              <use href="icons/arrow-left-icon.svg"></use>
+              <use href="icons/stack.svg#arrow-left-slider-icon"></use>
             </svg>
           </button>
         </div>
@@ -300,6 +323,7 @@
           <li class="card">
             <a class="card__image-link" tabindex="-1" href="#">
               <picture>
+                <source type="image/webp" srcset="images/catalog/catalog-1@1x.webp 1x, images/catalog/catalog-1@2x.webp 2x" width="130" height="188">
                 <img class="card__image" src="images/catalog/catalog-1@1x.png" srcset="images/catalog/catalog-1@2x.png 2x" width="130" height="188" alt="Фото товара">
               </picture>
             </a>
@@ -317,6 +341,7 @@
           <li class="card">
             <a class="card__image-link" tabindex="-1" href="#">
               <picture>
+                <source type="image/webp" srcset="images/catalog/catalog-2@1x.webp 1x, images/catalog/catalog-2@2x.webp 2x" width="130" height="188">
                 <img class="card__image" src="images/catalog/catalog-2@1x.png" srcset="images/catalog/catalog-2@2x.png 2x" width="130" height="188" alt="Фото товара">
               </picture>
             </a>
@@ -334,6 +359,7 @@
           <li class="card">
             <a class="card__image-link" tabindex="-1" href="#">
               <picture>
+                <source type="image/webp" srcset="images/catalog/catalog-3@1x.webp 1x, images/catalog/catalog-3@2x.webp 2x" width="130" height="188">
                 <img class="card__image" src="images/catalog/catalog-3@1x.png" srcset="images/catalog/catalog-3@2x.png 2x" width="130" height="188" alt="Фото товара">
               </picture>
             </a>
@@ -351,6 +377,7 @@
           <li class="card">
             <a class="card__image-link" tabindex="-1" href="#">
               <picture>
+                <source type="image/webp" srcset="images/catalog/catalog-4@1x.webp 1x, images/catalog/catalog-4@2x.webp 2x" width="130" height="188">
                 <img class="card__image" src="images/catalog/catalog-4@1x.png" srcset="images/catalog/catalog-4@2x.png 2x" width="130" height="188" alt="Фото товара">
               </picture>
             </a>
@@ -368,6 +395,7 @@
           <li class="card">
             <a class="card__image-link" tabindex="-1" href="#">
               <picture>
+                <source type="image/webp" srcset="images/catalog/catalog-5@1x.webp 1x, images/catalog/catalog-5@2x.webp 2x" width="130" height="188">
                 <img class="card__image" src="images/catalog/catalog-5@1x.png" srcset="images/catalog/catalog-5@2x.png 2x" width="130" height="188" alt="Фото товара">
               </picture>
             </a>
@@ -385,6 +413,7 @@
           <li class="card">
             <a class="card__image-link" tabindex="-1" href="#">
               <picture>
+                <source type="image/webp" srcset="images/catalog/catalog-6@1x.webp 1x, images/catalog/catalog-6@2x.webp 2x" width="130" height="188">
                 <img class="card__image" src="images/catalog/catalog-6@1x.png" srcset="images/catalog/catalog-6@2x.png 2x" width="130" height="188" alt="Фото товара">
               </picture>
             </a>
@@ -406,7 +435,7 @@
               <a class="pagination__link pagination__link-previous link" href="#">
                 <span class="pagination__link-button">Назад</span>
                 <svg class="pagination__link-icon" aria-hidden="true" focusable="false" width="6" height="10">
-                  <use href="icons/arrow-left-icon.svg"></use>
+                  <use href="icons/stack.svg#arrow-left-pagination-icon"></use>
                 </svg>
               </a>
             </li>
@@ -423,7 +452,7 @@
               <a class="pagination__link pagination__link-next link" href="#">
                 <span class="pagination__link-button">Вперёд</span>
                 <svg class="pagination__link-icon" aria-hidden="true" focusable="false" width="6" height="10">
-                  <use href="icons/arrow-right-icon.svg"></use>
+                  <use href="icons/stack.svg#arrow-right-pagination-icon"></use>
                 </svg>
               </a>
             </li>
@@ -435,6 +464,11 @@
       <h2 class="visually-hidden">Карта с адресом компании.</h2>
       <div class="address__wrapper">
         <picture>
+          <source type="image/webp" media="(min-width: 1440px)" srcset="images/address-map-desktop@1x.webp 1x, images/address-map-desktop@2x.webp 2x" width="1440" height="540">
+          <source type="image/webp" media="(min-width: 768px)" srcset="images/address-map-tablet@1x.webp 1x, images/address-map-tablet@2x.webp 2x" width="768" height="480">
+          <source type="image/webp" srcset="images/address-map-mobile@1x.webp 1x, images/address-map-mobile@2x.webp 2x" width="320" height="420">
+          <source type="image/png" media="(min-width: 1440px)" srcset="images/address-map-desktop@1x.png 1x, images/address-map-desktop@2x.png 2x" width="1440" height="540">
+          <source type="image/png" media="(min-width: 768px)" srcset="images/address-map-tablet@1x.png 1x, images/address-map-tablet@2x.png 2x" width="768" height="480">
           <img class="address__map" src="images/address-map-mobile@1x.jpg" srcset="images/address-map-mobile@2x.jpg 2x" width="320" height="420" alt="Карта с адресом компании.">
         </picture>
       </div>
@@ -444,6 +478,7 @@
     <div class="footer__container page__container">
       <a class="footer__logo" href="index.html">
         <picture>
+          <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-desktop.svg" width="170" height="36">
           <img class="footer__logo-image" src="images/logo-tablet.svg" width="82" height="36" alt="Логотип компании Drink2Go">
         </picture>
       </a>
@@ -453,7 +488,7 @@
           <a class="social__link" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Мы в Вконтакте.</span>
             <svg aria-hidden="true" focusable="false" width="20" height="20">
-              <use href="icons/vk-icon.svg"></use>
+              <use href="icons/stack.svg#vk-icon"></use>
             </svg>
           </a>
         </li>
@@ -461,7 +496,7 @@
           <a class="social__link" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">Мы в Pinterest.</span>
             <svg aria-hidden="true" focusable="false" width="22" height="22">
-              <use href="icons/pinterest-icon.svg"></use>
+              <use href="icons/stack.svg#printerest-icon"></use>
             </svg>
           </a>
         </li>
@@ -469,7 +504,7 @@
           <a class="social__link" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Мы в Одноклассниках.</span>
             <svg aria-hidden="true" focusable="false" width="20" height="20">
-              <use href="icons/ok-icon.svg"></use>
+              <use href="icons/stack.svg#ok-icon"></use>
             </svg>
           </a>
         </li>
