added slider styles and added js

--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,8 @@
   <link rel="preload" href="fonts/Montserrat-Bold.woff2" type="font/woff2" as="font">
   <link rel="preload" href="fonts/Montserrat-ExtraBold.woff2" type="font/woff2" as="font">
 
-  <link rel="stylesheet" href="styles/styles.css">
+  <link href="./vendor/nouislider/nouislider.css" rel="stylesheet">
+  <link href="styles/styles.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
@@ -566,7 +567,7 @@
     </div>
   </footer>
 
-  <!-- <script src="vendor/nouislider/nouislider.js" defer></script> -->
+  <script src="vendor/nouislider/nouislider.js" defer></script>
   <script src="scripts/index.js" type="module"></script>
 </body>
 
