update fonts and includes

--- a/source/index.html
+++ b/source/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Название проекта</title>
+  <title>Drink2Go</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <link rel="preload" href="fonts/Montserrat-Regular.woff2" type="font/woff2" as="font">
-  <link rel="preload" href="fonts/Montserrat-Medium.woff2.woff2" type="font/woff2" as="font">
-  <link rel="preload" href="fonts/Montserrat-SemiBold.woff2" type="font/woff2" as="font">
-  <link rel="preload" href="fonts/Montserrat-Bold.woff2" type="font/woff2" as="font">
-  <link rel="preload" href="fonts/Montserrat-ExtraBold.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Montserrat-400.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Montserrat-500.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Montserrat-600.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Montserrat-700.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Montserrat-800.woff2" type="font/woff2" as="font">
 
   <link href="./vendor/nouislider/nouislider.css" rel="stylesheet">
   <link href="styles/styles.css" rel="stylesheet">
