--- a/source/index.html
+++ b/source/index.html
@@ -96,9 +96,7 @@
               <p class="hero__label section-title">Новинка!</p>
               <p class="hero__title">Декаф Флэт Уайт</p>
               <p class="hero__description">
-                Свежесваренный кофе без кофеина из Эфиопии
-                с натуральным фермерским молоком — то, что нужно
-                для расслабления после тяжёлого рабочего дня
+                Свежесваренный кофе без кофеина из&nbsp;Эфиопии с&nbsp;натуральным фермерским&nbsp;молоком — то, что нужно для&nbsp;расслабления после тяжёлого&nbsp;рабочего дня
               </p>
               <div class="hero__advertisement advertisement">
                 <p class="advertisement__price-before">295₽</p>
@@ -200,7 +198,7 @@
           </li>
           <li class="advantages__item advantages__item--convenience">
             <h3 class="advantages__item-title">Удобство</h3>
-            <p class="advantages__item-description">Легко помещается и в карман, и в маленькую сумочку</p>
+            <p class="advantages__item-description">Легко помещается и в карман, и&nbsp;в&nbsp;маленькую сумочку</p>
           </li>
           <li class="advantages__item advantages__item--cheerfulness">
             <h3 class="advantages__item-title">Бодрость</h3>
@@ -208,7 +206,7 @@
           </li>
           <li class="advantages__item advantages__item--ecology">
             <h3 class="advantages__item-title">Экологичность</h3>
-            <p class="advantages__item-description">Вся упаковка сделана из перерабатываемых материалов</p>
+            <p class="advantages__item-description">Вся упаковка сделана из&nbsp;перерабатываемых материалов</p>
           </li>
         </ul>
       </div>
@@ -332,7 +330,7 @@
               <a class="card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
             </h3>
             <p class="card__description">
-              Кофе без кофеина из Эфиопии с натуральным фермерским молоком
+              Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком
             </p>
             <div class="card__price-wrapper">
               <span class="card__price">225₽</span>
@@ -350,7 +348,7 @@
               <a class="card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
             </h3>
             <p class="card__description">
-              Кофе без кофеина из Эфиопии с натуральным фермерским молоком
+              Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком
             </p>
             <div class="card__price-wrapper">
               <span class="card__price">225₽</span>
@@ -368,7 +366,7 @@
               <a class="card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
             </h3>
             <p class="card__description">
-              Кофе без кофеина из Эфиопии с натуральным фермерским молоком
+              Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком
             </p>
             <div class="card__price-wrapper">
               <span class="card__price">225₽</span>
@@ -386,7 +384,7 @@
               <a class="card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
             </h3>
             <p class="card__description">
-              Кофе без кофеина из Эфиопии с натуральным фермерским молоком
+              Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком
             </p>
             <div class="card__price-wrapper">
               <span class="card__price">225₽</span>
@@ -404,7 +402,7 @@
               <a class="card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
             </h3>
             <p class="card__description">
-              Кофе без кофеина из Эфиопии с натуральным фермерским молоком
+              Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком
             </p>
             <div class="card__price-wrapper">
               <span class="card__price">225₽</span>
@@ -422,7 +420,7 @@
               <a class="card__link" tabindex="-1" href="#">Декаф Флэт Уайт</a>
             </h3>
             <p class="card__description">
-              Кофе без кофеина из Эфиопии с натуральным фермерским молоком
+              Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком
             </p>
             <div class="card__price-wrapper">
               <span class="card__price">225₽</span>
