bix bugs and added favicons

--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,12 @@
   <title>Drink2Go</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/favicon-180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="favicons/favicon-192.png">
+  <link rel="manifest" href="manifest.webmanifest">
+
   <link rel="preload" href="fonts/Montserrat-400.woff2" type="font/woff2" as="font">
   <link rel="preload" href="fonts/Montserrat-500.woff2" type="font/woff2" as="font">
   <link rel="preload" href="fonts/Montserrat-600.woff2" type="font/woff2" as="font">
@@ -494,7 +500,7 @@
           <a class="social__link" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">Мы в Pinterest.</span>
             <svg aria-hidden="true" focusable="false" width="22" height="22">
-              <use href="icons/stack.svg#printerest-icon"></use>
+              <use href="icons/stack.svg#pinterest-icon"></use>
             </svg>
           </a>
         </li>
